# rustychickpeas

./: .coveragerc  .gitignore  CLAUDE.md  COMMIT_MESSAGE_0.4.1.txt  Cargo.toml  LICENSE  README.md  RELEASE_ANNOUNCEMENT_0.4.1.md  run_benchmarks.sh  tarpaulin.toml
.githooks/: pre-commit  pre-push
bench/: ALLOCATION_SETUP.md  IMAGE_CONFLICTS.md  QUICK_START.md  README.md  collect.py  plot.py
docs/: COVERAGE.md
readme/: ARCHITECTURE.md  BUILD.md  SETUP.md
rustychickpeas-core/: Cargo.toml
rustychickpeas-core/benches/: PERFORMANCE.md  graph_builder.rs  graph_builder_parquet.rs  graph_snapshot.rs  instruction_counts.rs  ldbc_snb_bi.rs
rustychickpeas-core/examples/: perf_via.rs  roaring_presence_eval.rs
rustychickpeas-core/src/: aggregate.rs  analytics.rs  bitmap.rs  builder.rs  error.rs  fulltext.rs  geo.rs  graph_builder.rs  graph_builder_csv.rs  graph_builder_parquet.rs  graph_snapshot.rs  interner.rs  lib.rs  rusty_chickpeas.rs  serialize.rs  snapshot.rs  types.rs
rustychickpeas-core/tests/: fulltext_test.rs  geo_test.rs  ldbc_snb_bi_benchmark.rs  property_tests.rs  python_api_coverage_test.rs  rcpg_serialization_test.rs  s3_integration_test.rs
rustychickpeas-core/tests/ldbc/ldbc-snb-bi/: ldbc_snb_bi_benchmark.rs
rustychickpeas-format/: Cargo.toml  FORMAT.md
rustychickpeas-format/src/: cursor.rs  error.rs  graph.rs  lib.rs  rcpg.rs  rrsr.rs
rustychickpeas-format/tests/: format_tests.rs
rustychickpeas-pipeline/: Cargo.toml
rustychickpeas-pipeline/examples/: generate_shared_demo.rs
rustychickpeas-pipeline/src/: lib.rs
rustychickpeas-python/: Cargo.toml  README.md  pyproject.toml
rustychickpeas-python/docs/: column-access.md
rustychickpeas-python/src/: direction.rs  graph_snapshot.rs  graph_snapshot_builder.rs  lib.rs  node.rs  node_set.rs  relationship.rs  rrsr.rs  rusty_chickpeas.rs  utils.rs
rustychickpeas-python/tests/: benchmark_deduplication.py  benchmark_graph_builder_parquet.py  benchmark_large_parquet.py  benchmark_s3_parquet.py  test_analytics.py  test_basic_operations.py  test_bfs_distances.py  test_bulk_load_parquet.py  test_column.py  test_column_bytes.py  test_csv_loading.py  test_direction.py  test_ergonomics.py  test_fold_via.py  test_fts_geo.py  test_graph_snapshot.py  test_graph_snapshot_builder.py  test_neighbor_groups.py  test_node.py  test_parquet_deduplication.py  test_primitives.py  test_relationship.py  test_rels_with_props.py  test_roots_via.py  test_rrsr.py  test_rusty_chickpeas.py
rustychickpeas-reader/: Cargo.toml  README.md
rustychickpeas-reader/demo/: index.html  main.js
rustychickpeas-reader/examples/: generate_demo.rs
rustychickpeas-reader/src/: lib.rs  records.rs  wasm.rs
rustychickpeas-reader/tests/: reader_tests.rs
scripts/: BENCHMARK_TRACKING.md  LDBC_SCALE_FACTOR_SIZES.md  benchmark_tag.sh  check_ldbc_build_status.sh  compare_benchmarks.sh  coverage.ps1  coverage.sh  coverage_python.sh  coverage_python_api.sh  create_release_tag.sh  download_ldbc_sf1.sh  download_ldbc_sf10.sh  download_ldbc_sf10_direct.sh  generate_benchmark_charts.py  generate_ldbc_sf10_sf30.sh  generate_ldbc_sf1_spark.sh  generate_performance_readme.py  monitor_ldbc_generation.sh  monitor_sf10.sh  run_all_tests.sh  run_benchmark_workflow.sh  save_benchmark_results.py
tasks/: 001_s3_parquet_streaming.done.md  002_rel_property_load_errors.done.md  003_panic_sweep.done.md  004_dedup_stale_label_cache.done.md  005_csv_f64_silent_drop.done.md  006_ci_clippy_fmt.md  007_s3_localstack_ci.done.md  008_bench_token_hygiene.done.md  009_snapshot_serialization_format.done.md  010_wasm_reader.done.md  010_wasm_reader.md  011_property_tests.done.md  012_python_ergonomics.done.md  013_doc_script_sweep.done.md  014_python_rcpg_api.done.md  015_shared_id_build_pipeline.done.md  015_shared_id_build_pipeline.md  016_reader_property_accessors.done.md  016_reader_property_accessors.md  017_python_shortest_path.done.md  018_python_neighbors_type_filter.done.md  019_rcpg_fuzz_hardening.done.md  020_python_rrsr_write.done.md  021_core_column_slices.done.md  022_core_chain_root.done.md  023_core_bfs_distances.done.md  024_core_descendants_iter.done.md  025_core_rankselect_columns.done.md  026_core_aggregation_primitives.done.md  026_core_aggregation_primitives.md  027_core_wsp_reuse_scratch.done.md  027_core_wsp_reuse_scratch.in-progress.md  028_reader_rel_property_accessors.done.md  (+21 more)
(+5 files in other folders)
