[workspace]
members = [
    "rustychickpeas-core",
    "rustychickpeas-format",
    "rustychickpeas-pipeline",
    "rustychickpeas-python",
    "rustychickpeas-reader",
]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2021"
authors = ["Eve Freeman <eve.freema@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
roaring = "0.11"
thiserror = "2.0"
lasso = "0.7"
parquet = "57.0"
arrow = "57.0"

# Python bindings
pyo3 = { version = "0.26", features = ["extension-module"] }

