[package]
name = "rustychickpeas-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
roaring = { workspace = true }
thiserror = { workspace = true }
lasso = { workspace = true }
ahash = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
bitvec = "1.0"
hashbrown = "0.16"
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"
tempfile = "3.8"

[[bench]]
name = "graph_builder"
harness = false

[[bench]]
name = "graph_snapshot"
harness = false

[[bench]]
name = "bulk_load"
harness = false

